--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DERIV_APP_ID=
-DERIV_API_TOKEN=
+DERIV_APP_ID=108391
+DERIV_API_TOKEN=gxggTvHYN9oYFq5
 SYMBOL=1HZ10V
 STAKE=1.00
 DURATION_MINUTES=2
