--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-DERIV_APP_ID=
-DERIV_API_TOKEN=
+DERIV_APP_ID=108391
+DERIV_API_TOKEN=gxggTvHYN9oYFq5
 SYMBOL=1HZ10V
 DURATION_MINUTES=2
 BARRIER_DISTANCE=1.55
-COOLDOWN_SECONDS=10
+COOLDOWN_SECONDS=1
 CURRENCY=USD
 MAX_OPEN=1
